--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'realm-android'
+//apply plugin: 'kotlin-parcelize'
+
+
 
 
 repositories {
@@ -66,6 +69,10 @@ dependencies {
     implementation files('libs/poi-3.7.jar')
 
     testImplementation 'junit:junit:4.12'
+
+    // view model
+//    implementation "androidx.core:core-ktx:+"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
